@@ -23,7 +23,6 @@
 
         - redo notifications using the message style stuff for android wear
         - reply from the second account mention notification
-        - doesn't actually clear the notification stuff when swiping it away
 
     Version 2.6.0
         - More fragments to choose from
